# flow-backend

./: .dockerignore  .gitignore  .gitmodules  Cargo.lock.bak  Cargo.toml  LICENSE  README.md  admin.toml  cmds-server.dockerfile  config.toml  deno.json  guest.toml  node-definition.json  package.json
anchor-libs/mpl-core-candy-guard/: Cargo.toml
anchor-libs/mpl-core-candy-guard/src/: lib.rs
crates/cmds-bun/: Cargo.toml  README.md  TESTING.md  build.rs  package.json  run.ts
crates/cmds-bun/src/: lib.rs  test_utils.rs
crates/cmds-bun/tests/: add.jsonc  add.ts
crates/cmds-deno/: @space-operator  Cargo.toml  deps.ts  deps_jsr.ts  deps_local.ts  run.ts
crates/cmds-deno/node-definitions/: deno_playground.json  deno_playground.jsonc
crates/cmds-deno/src/: lib.rs
crates/cmds-deno/tests/: add.jsonc  add.ts  playground.ts
crates/cmds-image/: Cargo.toml
crates/cmds-image/node-definitions/: image_composite.jsonc  image_convert.jsonc  image_crop.jsonc  image_info.jsonc  image_resize.jsonc  image_rotate.jsonc  image_thumbnail.jsonc  qr_code.jsonc
crates/cmds-image/src/: composite.rs  convert.rs  crop.rs  info.rs  lib.rs  qr_code.rs  resize.rs  rotate.rs  thumbnail.rs
crates/cmds-pdg/: Cargo.toml
crates/cmds-pdg/node-definitions/: gen_metaplex_attrs.json  gen_metaplex_attrs.jsonc  gen_pdg_attrs.json  gen_pdg_attrs.jsonc  generate_base.json  generate_base.jsonc  get_effect_list.json  get_effect_list.jsonc  parse_pdg_attrs.json  parse_pdg_attrs.jsonc  pdg_render.json  pdg_render.jsonc  push_effect_list.json  push_effect_list.jsonc  update_render_params.json  update_render_params.jsonc
crates/cmds-pdg/src/: gen_metaplex_attrs.rs  gen_pdg_attrs.rs  generate_base.rs  get_effect_list.rs  lib.rs  parse_pdg_attrs.json  parse_pdg_attrs.rs  pdg_render.rs  push_effect_list.rs  update_render_params.rs
crates/cmds-solana/: Cargo.toml  TESTING.md
crates/cmds-solana/node-definitions/: associated_token_account.json  create_mint_account.json  create_proxy_authority.json  create_token_account.json  das_api.json  das_api.jsonc  find_pda.json  find_pda.jsonc  generate_keypair.json  generate_keypair.jsonc  get_balance.json  get_balance.jsonc  interflow.json  interflow_instructions.json  memo.json  memo.jsonc  mint_token.json  print.json  pyth_price.json  pyth_price.jsonc  request_airdrop.json  request_airdrop.jsonc  transfer_sol.json  transfer_sol.jsonc  transfer_token.json  transfer_token.jsonc  wait.json  wallet.json
crates/cmds-solana/src/: associated_token_account.rs  create_mint_account.rs  create_token_account.rs  das.rs  error.rs  find_pda.rs  generate_keypair.rs  get_balance.rs  http_request.rs  lib.rs  memo.rs  mint_token.rs  mpl_create_nft.rs  mpl_nft_to_token_swap.rs  mpl_swap_to_token.rs  mpl_token_to_nft_swap.rs  pyth.rs  pyth_price.rs  request_airdrop.rs  solana_v2_compat.rs  test_utils.rs  transfer_sol.rs  transfer_token.rs  utils.rs  wallet.rs
crates/cmds-std/: Cargo.toml
crates/cmds-std/benches/: postgrest.rs
crates/cmds-std/node-definitions/: collect.jsonc  const.json  const.jsonc  flow_input.json  flow_input.jsonc  flow_output.json  flow_output.jsonc  flow_run_info.json  flow_run_info.jsonc  foreach.json  foreach.jsonc  http.json  http.jsonc  interflow.jsonc  interflow_instructions.jsonc  note.json  note.jsonc  print.jsonc  wait.json  wait.jsonc
crates/cmds-std/src/: const_cmd.rs  error.rs  flow_run_info.rs  http_request.rs  json_extract.rs  json_insert.rs  lib.rs  note.rs  print_cmd.rs  wait.rs  wait_cmd.rs
crates/command-rpc/: Cargo.toml  build.rs  gen-cmds-secrets.ts
crates/command-rpc/benches/: serialize.rs
crates/command-rpc/node-definitions/: add.json
crates/command-rpc/schema/: command.capnp
crates/command-rpc/src/: client.rs  command_side.rs  error_node.rs  errors.rs  flow_side.rs  lib.rs  make_sync.rs  server.rs  tracing.rs
crates/command-server/: Cargo.toml
crates/command-server/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/: apikey.rs  config.rs  connection.rs  error.rs  lib.rs  pool.rs  wasm_storage.rs
crates/flow/: Cargo.toml
crates/flow-lib-solana/: Cargo.toml
crates/flow-lib-solana/src/: lib.rs  multi_watcher.rs  utils.rs  watcher.rs
crates/flow-server/: Cargo.toml  Dockerfile  entrypoint.bash
crates/flow-server/benches/: crypto.rs
crates/flow-server/src/: cmd_workers.rs  error.rs  flow_logs.rs  lib.rs  main.rs  openapi.rs  read_cache.rs  user.rs  ws.rs
crates/flow/benches/: build_flow.rs
crates/flow/node-definitions/: wallet.jsonc
crates/flow/src/: context.rs  error.rs  flow_graph.rs  flow_registry.rs  flow_run_events.rs  flow_set.rs  lib.rs
crates/flow/test_files/: 2_foreach.json  branch.json  filter.json  nft.json  uneven_loop.json
crates/pdg-common/: Cargo.toml
crates/pdg-common/src/: lib.rs
crates/rhai-script/: Cargo.toml
crates/rhai-script/node-definitions/: rhai_script_0x1.json  rhai_script_0x1.jsonc  rhai_script_0x2.json  rhai_script_0x2.jsonc  rhai_script_0x3.json  rhai_script_0x3.jsonc  rhai_script_0x4.json  rhai_script_0x4.jsonc  rhai_script_0x5.json  rhai_script_0x5.jsonc  rhai_script_1x1.json  rhai_script_1x1.jsonc  rhai_script_1x2.json  rhai_script_1x2.jsonc  rhai_script_1x3.json  rhai_script_1x3.jsonc  rhai_script_1x4.json  rhai_script_1x4.jsonc  rhai_script_1x5.json  rhai_script_1x5.jsonc  rhai_script_2x1.json  rhai_script_2x1.jsonc  rhai_script_2x2.json  rhai_script_2x2.jsonc  rhai_script_2x3.json  rhai_script_2x3.jsonc  rhai_script_2x4.json  rhai_script_2x4.jsonc  rhai_script_2x5.json  rhai_script_2x5.jsonc  rhai_script_3x1.json  rhai_script_3x1.jsonc  rhai_script_3x2.json  (+27 more)
crates/space-wasm/: Cargo.toml
crates/srpc/: Cargo.toml
crates/umbra-prover/: Cargo.toml
crates/utils/: Cargo.toml
lib/command-rpc/: Cargo.toml  Dockerfile
lib/flow-lib/: Cargo.toml
lib/flow-tracing/: Cargo.toml
lib/flow-value/: Cargo.toml  value.schema.json
lib/schema/: Cargo.toml
lib/space-lib/: Cargo.toml  README.md
lib/space-macro/: Cargo.toml
lib/space-operator-cli/: CHANGELOG.md  Cargo.toml  HELP.md  README.md
lib/spo-helius/: Cargo.toml
lib/srpc/: Cargo.toml
(+3335 files in other folders)
