[workspace]
members = ["lib/*", "crates/*"]
exclude = ["crates/space-wasm/tests", "lib/space-operator-cli"]
resolver = "2"

[patch.crates-io]
rhai = { git = "https://github.com/space-operator/rhai", rev = "b39d2bfb" }
# fix zeroize and subtle dep conflict
aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "555ae1d82d000f01899498f969e6dc1d0a4fe467" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
# branch: update-deps
mpl-candy-machine-core = { git = "https://github.com/space-operator/mpl-candy-machine", rev = "6096215a779702fb7954103e0d3199d89e120e6f" }
mpl-candy-guard = { git = "https://github.com/space-operator/mpl-candy-machine", rev = "6096215a779702fb7954103e0d3199d89e120e6f" }
mpl-core-candy-machine-core = { git = "https://github.com/space-operator/mpl-core-candy-machine", rev = "e5f4d6c60e6d556ef4a3d18f4518d76ac2c01226" }
mpl-core-candy-guard = { git = "https://github.com/space-operator/mpl-core-candy-machine", rev = "e5f4d6c60e6d556ef4a3d18f4518d76ac2c01226" }

[patch."https://github.com/space-operator/flow-backend"]
flow-lib = { path = "./lib/flow-lib" }
flow-value = { path = "./lib/flow-value" }

[profile.dev]
debug = 0
opt-level = 1

[profile.release]
debug = 0
lto = "thin"

[profile.dev.build-override]
opt-level = 2
codegen-units = 256
debug = false

[profile.release.build-override]
opt-level = 2
codegen-units = 256

[workspace.dependencies]
# crates/
flow = { path = "crates/flow", version = "0.0.0" }
utils = { path = "crates/utils", version = "0.0.0" }
space-wasm = { path = "crates/space-wasm", version = "0.0.0" }
db = { path = "crates/db", version = "0.0.0" }
pdg-common = { path = "crates/pdg-common", version = "0.0.0" }
cmds-std = { path = "crates/cmds-std", version = "0.0.0" }
cmds-pdg = { path = "crates/cmds-pdg", version = "0.0.0" }
cmds-solana = { path = "crates/cmds-solana", version = "0.0.0" }
rhai-script = { path = "crates/rhai-script", version = "0.0.0" }
srpc = { path = "crates/srpc", version = "0.0.0" }
command-rpc = { path = "crates/command-rpc", version = "0.0.0" }
cmds-deno = { path = "crates/cmds-deno", version = "0.0.0" }

# lib/
value = { path = "lib/flow-value", version = "0.1.0", package = "flow-value" }
flow-lib = { path = "lib/flow-lib", version = "0.1.0" }
space-lib = { path = "lib/space-lib", version = "0.5.0" }
space-macro = { path = "lib/space-macro", version = "0.2.1" }
spo-helius = { path = "./lib/spo-helius", version = "0.1.0" }

# Non-local crates
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
bs58 = "0.4"
postgrest = { package = "spo-postgrest", version = "1.6.0" }
