[workspace]
members = ["lib/*", "crates/*", "anchor-libs/*"]
exclude = [
    "lib/space-operator-cli",
    "vendor/mpl-bubblegum",
    "vendor/mpl-core",
    "vendor/mpl-token-metadata",
]
resolver = "2"

[patch.crates-io]
rhai = { git = "https://github.com/space-operator/rhai", rev = "b39d2bfb" }

[profile.dev]
debug = 0
opt-level = 1

[profile.release]
debug = 0
lto = "thin"

[profile.dev.build-override]
opt-level = 2
codegen-units = 256
debug = false

[profile.release.build-override]
opt-level = 2
codegen-units = 256

[workspace.dependencies]
# crates/
flow = { path = "crates/flow", version = "0.0.0" }
utils = { path = "crates/utils", version = "0.0.0" }
db = { path = "crates/db", version = "0.0.0" }
pdg-common = { path = "crates/pdg-common", version = "0.0.0" }
cmds-std = { path = "crates/cmds-std", version = "0.0.0" }
cmds-pdg = { path = "crates/cmds-pdg", version = "0.0.0" }
cmds-solana = { path = "crates/cmds-solana", version = "0.0.0" }
rhai-script = { path = "crates/rhai-script", version = "0.0.0" }
srpc = { path = "crates/srpc", version = "0.0.0" }
command-rpc = { path = "crates/command-rpc", version = "0.0.0" }
cmds-deno = { path = "crates/cmds-deno", version = "0.0.0" }
anchor-libs = { path = "crates/anchor-libs", version = "0.0.0" }
flow-lib-solana = { path = "crates/flow-lib-solana", version = "0.0.0" }
mpl-core-candy-machine-core = { path = "anchor-libs/mpl-core-candy-machine-core", version = "0.0.0" }
mpl-core-candy-guard = { path = "anchor-libs/mpl-core-candy-guard", version = "0.0.0" }

# lib/
value = { path = "lib/flow-value", version = "0.1.0", package = "flow-value" }
flow-lib = { path = "lib/flow-lib", version = "0.1.0" }
space-lib = { path = "lib/space-lib", version = "0.5.0" }
space-macro = { path = "lib/space-macro", version = "0.2.1" }
spo-helius = { path = "./lib/spo-helius", version = "0.1.0" }

# Non-local crates
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
bs58 = "0.4"
postgrest = { package = "spo-postgrest", version = "1.6.0" }
