[workspace]
members = ["lib/*", "crates/*", "anchor-libs/*"]
exclude = [
    "lib/space-operator-cli",
    "vendor/mpl-bubblegum",
    "vendor/mpl-core",
    "vendor/mpl-token-metadata",
]
resolver = "3"

[patch.crates-io]
rhai = { git = "https://github.com/space-operator/rhai", rev = "b39d2bfb" }

[profile.dev]
debug = 0
opt-level = 1

[profile.release]
debug = 0
lto = "thin"

[profile.dev.build-override]
opt-level = 2
codegen-units = 256
debug = false

[profile.release.build-override]
opt-level = 2
codegen-units = 256

[workspace.dependencies]
# crates/
flow = { path = "crates/flow", version = "0.0.0" }
utils = { path = "crates/utils", version = "0.0.0" }
db = { path = "crates/db", version = "0.0.0" }
pdg-common = { path = "crates/pdg-common", version = "0.0.0" }
cmds-std = { path = "crates/cmds-std", version = "0.0.0" }
cmds-pdg = { path = "crates/cmds-pdg", version = "0.0.0" }
cmds-solana = { path = "crates/cmds-solana", version = "0.0.0" }
rhai-script = { path = "crates/rhai-script", version = "0.0.0" }
srpc = { path = "crates/srpc", version = "0.0.0" }
command-rpc = { path = "crates/command-rpc", version = "0.0.0" }
cmds-deno = { path = "crates/cmds-deno", version = "0.0.0" }
anchor-libs = { path = "crates/anchor-libs", version = "0.0.0" }
flow-lib-solana = { path = "crates/flow-lib-solana", version = "0.0.0" }
mpl-core-candy-machine-core = { path = "anchor-libs/mpl-core-candy-machine-core", version = "0.0.0" }
mpl-core-candy-guard = { path = "anchor-libs/mpl-core-candy-guard", version = "0.0.0" }

# lib/
value = { path = "lib/flow-value", version = "0.3.0", package = "flow-value" }
flow-lib = { path = "lib/flow-lib", version = "0.2.0" }
space-macro = { path = "lib/space-macro", version = "0.2.1" }
spo-helius = { path = "./lib/spo-helius", version = "0.1.0" }
futures-metrics = { path = "./lib/futures-metrics", version = "0.1.0" }

# Solana crates
solana-rpc-client = "3"
solana-rpc-client-api = "3"
solana-pubkey = "3"
solana-signer = "3"
solana-signature = "3"
solana-keypair = "3"
solana-program = "3"
solana-commitment-config = "3"
solana-presigner = "3"
solana-sanitize = "3"
solana-message = "3"
solana-transaction-error = { version = "3", features = ["serde"] }
solana-instruction-error = { version = "2", features = ["serde"] }
solana-system-interface = { version = "2", features = ["bincode"] }
solana-instruction = { version = "3", features = ["serde"] }
solana-account = "3"
solana-account-decoder = "3"
solana-compute-budget-interface = { version = "3", features = ["borsh"] }
solana-sdk-ids = "3"
solana-transaction = "3"
solana-transaction-status = "3"
agave-feature-set = "3"
agave-precompiles = "3"
solana-address-lookup-table-interface = "3"
solana-clock = "3"
solana-system-transaction = "3"

x402-actix = { git = "https://github.com/space-operator/x402-rs", branch = "fork" }
x402-rs = { git = "https://github.com/space-operator/x402-rs", branch = "fork" }
cdp-sdk = { git = "https://github.com/space-operator/cdp-sdk", branch = "fix" }
