[package]
name = "cmds-bun"
version = "0.0.0"
edition = "2024"

[features]
default = []

[dependencies]
flow-rpc.workspace = true
flow-lib.workspace = true

serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

tempfile = "3.10.1"
tokio = "1"
url = "2.5.0"
home = "0.5.9"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"

[build-dependencies]
flow-lib.workspace = true

[dev-dependencies]
tower-rpc.workspace = true
value.workspace = true

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-web = "4.5.1"
