[package]
name = "cmds-pdg"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdg-common = { workspace = true }
flow-lib = { workspace = true }

futures = "0.3.28"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio-tungstenite = { version = "0.18.0", features = [
    "rustls-tls-webpki-roots",
] }
thiserror = "1.0.40"
reqwest = { version = "0.11.16", features = ["json"] }
once_cell = "1.17.1"
uuid = { version = "1.3.1", features = ["serde"] }
tracing = "0.1.37"
tokio = "1.33.0"
