[package]
name = "cmds-solana"
version = "0.0.0"
edition = "2021"

[dependencies]
value = { workspace = true }
flow-lib = { workspace = true }

async-trait = "0.1"
tiny-bip39 = "0.8"
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", features = ["maths"] }
bincode = "1"
base64 = "0.13"
serde_json = "1"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "gzip",
    "multipart",
] }
tokio = { version = "1", features = ["time", "macros"] }
mime_guess = "2"
borsh = "0.10.4"
bytes = "1"
ed25519-dalek = "1"
futures = "0.3"
thiserror = "1"
anyhow = "1"
serde_with = "3.1.0"
bs58 = "0.4"
tracing = "0.1"
once_cell = "1.17"
rand = "0.8"
hex = "0.4.3"
byteorder = "1.4.3"
primitive-types = { version = "0.9.0", default-features = false }
chrono = "0.4.33"
bytemuck = { version = "1.16.1" }
bytemuck_derive = { version = "1.7.0" }
# branch: dev
struct-convert = { git = "https://github.com/juchiast/struct-convert", rev = "83b132915519515e364ce612ef2ac92441dc7bc9" }

# solana libs
solana-sdk = "=2.2.1"
solana-client = "=2.2.0"
solana-program = "=2.2.1"
solana-account-decoder = "=2.2.0"
solana-transaction-status = "=2.2.0"

# spl
spl-token = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=7.0.0", features = ["serde-traits"] }
spl-memo = { version = "=6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=6.0.0", features = ["no-entrypoint"] }
spl-account-compression = "=0.4.2"

# metaplex
mpl-token-metadata = "5.1.0"

mpl-candy-machine-core = { version = "=3.0.1", features = ["no-entrypoint"] }
mpl-candy-guard = { version = "=3.0.0", features = ["no-entrypoint"] }
# core, core candy machine and candy guard
mpl-core-candy-machine-core = { version = "=0.2.1", features = ["no-entrypoint"] }
mpl-core-candy-guard = { version = "=0.2.1", features = ["no-entrypoint"] }

mpl-core = { version = "=0.8.0", features = ["serde"] }
mpl-bubblegum = { version = "=1.4.0" }

# bundlr
bundlr-sdk = { version = "=0.3.0", default-features = false, features = [
    "solana",
] }

# branch: vendor
pyth-sdk-solana = { git = "https://github.com/space-operator/pyth-sdk-rs", rev = "c658146e28322ab89720cef94efb56b3c5c12f28" }
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", package = "jupiter-swap-api-client", rev = "e3c162b921f46eacc867ca9c55e7d610eefabe25"}

# anchor
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"

# clockwork-client = "=2.0.1"
# clockwork-utils = "=2.0.1"
# clockwork-thread-program = "=2.0.1"
# clockwork-sdk = "=2.0.1"

# [dependencies.clockwork-thread-program]
# git = "https://github.com/space-operator/clockwork.git"
# rev = "efd73675f670bfc0aab551d89c741e18c8cfed10"
# [dependencies.clockwork-thread-program]
# git = "https://github.com/space-operator/clockwork.git"
# rev = "efd73675f670bfc0aab551d89c741e18c8cfed10"

# [dependencies.payments]
# git = "https://github.com/clockwork-xyz/examples.git"
# rev = "1b65e8185796b4eac009750c0a0b8128576201ad"

# [dependencies.metaboss_utils]
# git = "https://github.com/space-operator/metaboss_utils.git"
# rev = "5e0a4c9bcd16d2f062549e190e928bebb135537f"

# [dependencies.space-wrapper]
# git = "https://github.com/space-operator/space-wrapper"
# rev = "eb257a070de0545d9051d9b9bb530df3e8736570"
# features = ["cpi"]

# [dependencies.xnft]
# git = "https://github.com/coral-xyz/xnft"
# rev = "6ff7a8e7b1bfa0024cdea8269df92bca681d68ec"
# features = ["no-entrypoint"]

[dependencies.wormhole-sdk]
git = "https://github.com/space-operator/wormhole"
rev = "b209022b85d8e6cbf4e37b059bfe3ce7fa11c6e1"

[dependencies.serde_wormhole]
git = "https://github.com/space-operator/wormhole"
rev = "b209022b85d8e6cbf4e37b059bfe3ce7fa11c6e1"

# [dependencies.wormhole-anchor-sdk]
# git = "https://github.com/wormhole-foundation/wormhole-scaffolding.git"
# rev = "7756f517fd63abae4be9b41ed82723def22bad09"

[dev-dependencies]
rust_decimal_macros = "1.26"
inventory = "0.3"
tracing-subscriber = "0.3"
