[package]
name = "cmds-solana"
version = "0.0.0"
edition = "2024"

[dependencies]
value = { workspace = true }
flow-lib = { workspace = true }

async-trait = "0.1"
tiny-bip39 = "0.8"
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", features = ["maths"] }
bincode = "1"
base64 = "0.13"
serde_json = "1"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "gzip",
    "multipart",
] }
tokio = { version = "1", features = ["time", "macros"] }
mime_guess = "2"
borsh = { version = "1", features = ["derive"] }
bytes = "1"
futures = "0.3"
thiserror = "1"
anyhow = "1"
serde_with = "3.1.0"
bs58 = "0.4"
tracing = "0.1"
once_cell = "1.17"
rand = "0.8"
hex = "0.4.3"
byteorder = "1.4.3"
primitive-types = { version = "0.9.0", default-features = false }
chrono = "0.4.33"
bytemuck = "1.16.1"
bytemuck_derive = "1.7.0"
struct-convert = "1.4.0"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

# solana libs
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-program = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-commitment-config = { workspace = true }
solana-signer = { workspace = true }
solana-account = { workspace = true }
solana-keypair = { workspace = true }
solana-presigner = { workspace = true }
solana-transaction = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-system-interface = { workspace = true }
solana-message = { workspace = true }
solana-secp256k1-program = { workspace = true }
solana-pubkey = { workspace = true, features = ["borsh"] }
solana-instruction = { workspace = true }

solana-program-v2 = { package = "solana-program", version = "2" }


anchor-libs.workspace = true

# spl
spl-token-interface = "2"
spl-token-2022-interface = { version = "2.1.0", features = ["serde"] }
spl-token-2022 = { version = "7", features = ["no-entrypoint"] }
spl-memo-interface = "2"
spl-associated-token-account-interface = "2"
spl-concurrent-merkle-tree = "1"
spl-record = { version = "0.4.0" }
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }

# attestation service
solana-attestation-service = { git = "https://github.com/solana-foundation/solana-attestation-service", branch = "pre-audit", package = "solana-attestation-service-client" }

# metaplex
mpl-token-metadata = { path = "../../vendor/mpl-token-metadata" }
mpl-core = { path = "../../vendor/mpl-core", features = ["serde"] }
mpl-bubblegum = { path = "../../vendor/mpl-bubblegum" }

mpl-core-candy-machine-core.workspace = true
mpl-core-candy-guard.workspace = true


# bundlr
bundlr-sdk = { version = "=0.3.0", default-features = false, features = [
    "solana",
] }
# bundlr-sdk doesn't have json feature in their Cargo.toml
reqwest11 = { package = "reqwest", version = "0.11", features = ["json"] }

# branch: vendor
pyth-sdk-solana = { git = "https://github.com/space-operator/pyth-sdk-rs", rev = "b26ee1ddf6dced5d4fc95ba339a6a1de76a5b1b3" }

# anchor
# branch: merged
anchor-lang = { git = "https://github.com/space-operator/anchor", rev = "6469201c5399f95f9414839282ea91471bd20260" }

# swig
swig-interface = { git = "https://github.com/anagrambuild/swig-wallet" }
swig-state = { git = "https://github.com/anagrambuild/swig-wallet" }


# tuktuk
tuktuk-program = "0.3.2"

[dependencies.wormhole-sdk]
git = "https://github.com/space-operator/wormhole"
rev = "b209022b85d8e6cbf4e37b059bfe3ce7fa11c6e1"

[dependencies.serde_wormhole]
git = "https://github.com/space-operator/wormhole"
rev = "b209022b85d8e6cbf4e37b059bfe3ce7fa11c6e1"

[dev-dependencies]
rust_decimal_macros = "1.26"
inventory = "0.3"
tracing-subscriber = "0.3"
