[package]
name = "command-rpc"
version = "0.0.0"
edition = "2024"

[[bench]]
name = "serialize"
harness = false

[build-dependencies]
capnpc = "0.20"

[dependencies]
actix = "0.13.3"
async-trait = "0.1.79"
flow-lib.workspace = true
futures = "0.3.30"
inventory = "0.3.15"
serde.workspace = true
serde_with = "3.7.0"
srpc.workspace = true
thiserror = "1.0.63"
tokio = { version = "1", features = ["net"] }
tokio-tungstenite = { version = "0.24.0", features = ["__rustls-tls"] }
tower = "0.5"
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }
capnp = "0.21"
capnp-rpc = "0.21"
schemars = { version = "1.0.0-alpha.17", features = ["uuid1", "rust_decimal1", "preserve_order", "indexmap2", "url2"] }
features = "0.10.0"
uuid1 = "0.0.2"
reqwest = { version = "0.12.15", default-features = false }
bincode = "2"
simd-json = "0.15.1"

[dev-dependencies]
criterion = "0.5.1"
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { version = "1", features = ["macros"] }
