[package]
name = "command-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "command-server"
path = "src/main.rs"

[dependencies]
# Command crates - register via inventory
cmds-std.workspace = true
cmds-pdg.workspace = true
cmds-solana.workspace = true
cmds-deno.workspace = true
rhai-script.workspace = true

# Core libraries
flow-lib.workspace = true
inventory = "0.3"

# HTTP server
actix-web = "4"
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
