[package]
name = "db"
version = "0.0.0"
edition = "2021"

[dependencies]
flow = { workspace = true }
flow-lib = { workspace = true }
value = { workspace = true }

serde = "1"
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "1.0.31"
tokio = "1"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
deadpool-postgres = { version = "0.11", features = ["rt_tokio_1"] }
tokio-postgres-rustls = "0.9"
rustls = "0.20"
rustls-pemfile = "1"
x509-parser = "0.14"
ring = "0.16"
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "gzip",
] }
bytes = "1"
url = "2.2"
bcrypt = { version = "0.13", default-features = false, features = ["std"] }
bs58 = "0.4"
base64 = "0.13"
toml = "0.5"
rand = "0.8"
blake3 = "1.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hashbrown = "0.13"
futures-util = "0.3"
kv = { version = "=0.24", features = ["json-value"] }
async-trait = "0.1"
tower = "0.4"
either = "1.9"
serde_bytes = "0.11"

[dependencies.tokio-postgres]
version = "0.7.10"
features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"]
