[package]
name = "db"
version = "0.0.0"
edition = "2024"

[dependencies]
flow = { workspace = true }
flow-lib = { workspace = true }
value = { workspace = true }
utils = { workspace = true }

serde = "1"
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "1.0.31"
tokio = "1"
uuid = { version = "1.0.0", features = ["v4", "v7", "serde"] }
deadpool-postgres = { version = "0.11", features = ["rt_tokio_1"] }
tokio-postgres-rustls = "0.9"
rustls = "0.20"
rustls-pemfile = "1"
rustls-native-certs = "0.6.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip"] }
bytes = "1"
url = "2.2"
bcrypt = { version = "0.13", default-features = false, features = ["std"] }
bs58 = "0.4"
base64 = "0.13"
toml = "0.5"
rand = "0.8"
blake3 = "1.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hashbrown = { version = "0.14", features = ["serde"] }
futures-util = "0.3"
kv = { version = "=0.24", features = ["json-value", "bincode-value", "msgpack-value"] }
async-trait = "0.1"
tower = "0.5"
either = "1.9"
serde_bytes = "0.11"
chacha20poly1305 = "0.10.1"
serde_with = { version = "3.9.0", features = ["base64"] }
zeroize = "1.8.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
actix-web = { version = "4.9.0", default-features = false }
polars = { version = "0.46.0", default-features = false, features = ["csv", "fmt"] }
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
schemars = "1.1.0"

[dependencies.tokio-postgres]
version = "0.7.10"
features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"]

[dev-dependencies]
tempfile = "3.10.1"
