[package]
name = "flow-lib-solana"
version = "0.0.0"
edition = "2024"

[dependencies]
# solana libs
solana-rpc-client = "2"
solana-rpc-client-api = "2"
solana-transaction-status = "2"
solana-pubkey = "2"
solana-signer = "2"
solana-signature = "2"
solana-keypair = "2"
solana-program = "2"
solana-commitment-config = "2"
solana-compute-budget-interface = { version = "2", features = ["borsh"] }
solana-transaction = "2"
solana-presigner = "2"
solana-address-lookup-table-interface = "2"
solana-clock = "2"
agave-feature-set = "2"
agave-precompiles = "2"

spo-helius = { workspace = true }
value = { workspace = true }
flow-lib = { workspace = true }
tower = { version = "0.5", features = ["buffer", "util", "retry"] }
serde = { version = "1.0.137", features = ["derive"] }
bincode1 = { package = "bincode", version = "1" }
five8 = { version = "0.2.1", features = ["std"] }
bincode = { version = "2.0.1", features = ["serde"] }
borsh1 = { package = "borsh", version = "1" }
futures = "0.3"
tokio = "1"
bs58 = "0.5.1"
tracing = "0.1"
serde_json = { version = "1", features = ["raw_value"] }
reqwest = { version = "0.12", default-features = false }
nom = "7.1.3"
serde_with = { version = "3", features = ["base64"] }
anyhow = "1.0"
bon = "3.0.2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
bytes = { version = "1.8.0", features = ["serde"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pin-project-lite = "0.2.16"

[dev-dependencies]
rand = "0.9.2"
solana-system-transaction = "2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
