[package]
name = "flow-lib-solana"
version = "0.0.0"
edition = "2024"

[dependencies]
# solana libs
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-transaction-status = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-signature = { workspace = true }
solana-keypair = { workspace = true }
solana-program = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-transaction = { workspace = true }
solana-presigner = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
solana-clock = { workspace = true }
solana-message.workspace = true
agave-feature-set = { workspace = true }
agave-precompiles = { workspace = true }
solana-system-interface = { workspace = true }

spo-helius = { workspace = true }
value = { workspace = true }
flow-lib = { workspace = true }
tower = { version = "0.5", features = ["buffer", "util", "retry"] }
serde = { version = "1.0.137", features = ["derive"] }
bincode1 = { package = "bincode", version = "1" }
five8 = { version = "0.2.1", features = ["std"] }
bincode = { version = "2.0.1", features = ["serde"] }
borsh1 = { package = "borsh", version = "1" }
futures = "0.3"
tokio = "1"
bs58 = "0.5.1"
tracing = "0.1"
serde_json = { version = "1", features = ["raw_value"] }
reqwest = { version = "0.12", default-features = false }
nom = "7.1.3"
serde_with = { version = "3", features = ["base64"] }
anyhow = "1.0"
bon = "3.0.2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
bytes = { version = "1.8.0", features = ["serde"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pin-project-lite = "0.2.16"

[dev-dependencies]
rand = "0.9.2"
solana-system-transaction = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
