[package]
name = "flow-server"
version = "0.0.0"
edition = "2021"

[features]
default = ["import"]
import = []

[dependencies]
db = { workspace = true }
flow = { workspace = true }
flow-lib = { workspace = true }
value = { workspace = true }
space-wasm = { workspace = true }
utils = { workspace = true }
cmds-pdg = { workspace = true }
cmds-std = { workspace = true }
cmds-solana = { workspace = true }

actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-cors = "0.6"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = "1"
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
toml = "0.5"
chrono = "0.4"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
futures-channel = "0.3"
bytes = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.13"
rand = "0.8"
bincode = "2.0.0"
blake3 = "1.3"
ed25519-dalek = "2"
bs58 = "0.4"
hex = "0.4"
hashbrown = "0.14"
anyhow = "1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
solana-sdk = { version = "2", default-features = false }
solana-client = "2"
either = { version = "1.9", features = ["serde"] }
regex = "1.8.3"
once_cell = "1.17.2"
rhai-script.workspace = true
tracing-log = "0.2.0"
url = { version = "2.5.0", features = ["serde"] }
async-trait = "0.1.80"
five8 = { version = "0.2.1", features = ["std"] }
getset = "0.1.3"

[dev-dependencies]
criterion = "0.5"
inventory = "0.3"

[[bench]]
name = "crypto"
harness = false
